Removed reflection nastyness in auth FCP.